# tovpy

./: AUTHORS.md  README.md  Untitled.ipynb  __init__.py  eos.py  pyproject.toml  setup.cfg  setup.py  test.csv  test.py  testeosfile.py  tidalpars.py  tov.py  units.py  utils.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
MATLAB_solver/tov/: ComputeLegendre.m  ComputeLove.m  Factd.m  Lambda.m  PWP4EOS.m  PWPEOSComputeLogRho0.m  TOVIterate.m  TOVL.m  TOVMax.m  TOVh.m  TidalCoupConst.m  factory_Love_num.m
data/: 2B.rns.txt  BHB_lp_25-Sept-2017.rns.txt  BLQ_30-Jan-2020.rns.txt  BLh_gibbs_180_0.35_10-Jul-2019.rns.txt  DD2_25-Sept-2017.rns.txt  ENG.rns.txt  LS220B0.rns.txt  MS1b.rns.txt  NL3_05-Oct-2017.rns.txt  SFHo+BL_01-Apr-2019.rns.txt  SFHo_25-Sept-2017.rns.txt  SLy.rns.txt  SLy4.rns.txt  SLy4_15-Jun-2018.rns.txt  TM1_05-Oct-2017.rns.txt  TMA_05-Oct-2017.rns.txt  compare.py  data_generation.py  eosAPR_fit.txt  eosAU.txt  eosB.txt  eosC.txt  eosF.txt  eosFPS_fit.txt  eosFPS_old.txt  eosG.txt  eosL.txt  eosN.txt  eosNV.txt  eosO.txt  eosSLy_fit.txt  eosUU.txt  eosWS.txt  eos_SFHo_adb.rns.txt
eos/: BLQ_30-Jan-2020.rns  BLh_gibbs_180_0.35_10-Jul-2019.rns  README.md
examples/: example.ipynb  make_tov_sequence.py
examples/results/: Love_data.txt  MR_data.txt  eos_data.txt
src/tovpy/: __init__.py  eos.py  tov.py  utils.py
tovpy/: __init__.py  data_generation.py  eos.py  tidalpars.py  tov.py  units.py  utils.py
tovpy/data/: 2H.rns.txt  ALF2.rns.txt  DD2_22-Jun-2018.rns.txt  H4.rns.txt  LS220B0v2.rns.txt  LS_220_25-Sept-2017.rns.txt  MPA1.rns.txt  MS1.rns.txt  (+4 more)
(+70 files in other folders)
