[build-system]
requires = [
  "setuptools>=42",  # setuptools 42+ supports pyproject.toml metadata
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "TOVpy"
version = "1.0.0"
description = "Tolman-Oppenheimer-Volkoff solver in Python"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GNU-GPLv3" }
authors = [
  { name = "S. Bernuzzi", email = "sebastiano.bernuzzi@uni-jena.de" }
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]
